# vkBasalt

./: .clang-format  .gitattributes  .gitignore  .gitmodules  LICENSE  Makefile  README.md  docker-build  format.sh  makefile  meson-32-cross.txt  meson.build  meson_options.txt  steamos-install.sh
config/: makefile  meson.build  vkBasalt.conf  vkBasalt.json  vkBasalt.json.in  vkBasalt32.json  vkBasalt64.json
docker/: Dockerfile  build
include/vulkan/: cast_utils.h  hash_util.h  hash_vk_types.h  vk_dispatch_table_helper.h  vk_enum_string_helper.h  vk_extension_helper.h  vk_format_utils.cpp  vk_format_utils.h  vk_layer_config.cpp  vk_layer_config.h  vk_layer_data.h  vk_layer_dispatch_table.h  vk_layer_logging.h  vk_layer_utils.cpp  vk_layer_utils.h  vk_loader_platform.h  vk_object_types.h  vk_safe_struct.cpp  vk_safe_struct.h  vk_typemap_helper.h  vk_validation_error_messages.h  vulkan.hpp
shader/: cas.comp.glsl  cas.frag.glsl  full_screen_rect.vert.glsl  full_screen_triangle.vert.glsl  fxaa.frag.glsl  fxaa3_11.h  lut.frag.glsl  makefile  meson.build  smaa_blend.frag.glsl  smaa_blend.vert.glsl  smaa_edge.vert.glsl  smaa_edge_color.frag.glsl  smaa_edge_luma.frag.glsl  smaa_neighbor.frag.glsl  smaa_neighbor.vert.glsl  smaa_settings.h
src/: AreaTex.h  INIReader.h  SearchTex.h  SimpleIni.h  basalt.cpp  buffer.cpp  buffer.hpp  command_buffer.cpp  command_buffer.hpp  compute_pipeline.cpp  compute_pipeline.hpp  config.cpp  config.hpp  descriptor_set.cpp  descriptor_set.hpp  effect.cpp  effect.hpp  effect_cas.cpp  effect_cas.hpp  effect_deband.cpp  effect_deband.hpp  effect_dls.cpp  effect_dls.hpp  effect_fxaa.cpp  effect_fxaa.hpp  effect_lut.cpp  effect_lut.hpp  effect_reshade.cpp  effect_reshade.hpp  effect_simple.cpp  effect_simple.hpp  effect_smaa.cpp  effect_smaa.hpp  effect_transfer.cpp  effect_transfer.hpp  fake_swapchain.cpp  fake_swapchain.hpp  format.cpp  format.hpp  framebuffer.cpp  (+42 more)
src/reshade/: GLSL.std.450.h  effect_expression.hpp  effect_lexer.cpp  effect_preprocessor.cpp  meson.build  spirv.hpp
src/shader/: cas.frag.glsl  deband.frag.glsl  dls.frag.glsl  full_screen_triangle.vert.glsl  fxaa.frag.glsl  lut.frag.glsl  meson.build  smaa_edge.vert.glsl  smaa_edge_color.frag.glsl  smaa_neighbor.frag.glsl  smaa_neighbor.vert.glsl  smaa_settings.h
subprojects/: vulkan-headers.wrap  vulkan-validationlayers.wrap
