option('with_so', type : 'boolean', value : true, description : 'install the library')
option('with_json', type : 'boolean', value : true, description : 'install the json')
option('append_libdir_vkbasalt', type : 'boolean', value : false, description: 'Append "vkbasalt" to libdir path or not.')
option('vk_force_fallback', type : 'boolean', value : false, description: 'Force fallback to bundled Vulkan headers.')
